# FJSP-scheduler

./: .gitignore  README.md  pyproject.toml  setup.cfg
demo_scheduler/: crossover.py  main.py
scripts/: install-poetry.sh  lint.sh  test.sh
tests/: corner_cases.py  test_demo_scheduler.py
